k8s/apps/sloth-cloud-api/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sloth-cloud-api-lab
  labels:
    app.kubernetes.io/name: sloth-cloud-api-lab
spec:
  selector:
    app.kubernetes.io/name: sloth-cloud-api-lab
  ports:
    - name: http
      port: 80
      targetPort: http
